force-app/main/default/objects/POSI__c/POSI__c.object-meta.xml
<CustomObject>
    <description>Allows a user to capture information on a prospect or existing customer that details their profile, objectives, strategies, and issues (POSI grid) - Aligns with the banks strategy on IMPAX sales techniques</description>
    <label>Corporate Profile Grid</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>POSI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Profile Grids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>