force-app/main/default/objects/POSI__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issues</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>