force-app/main/default/objects/POSI__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Objectives</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>