force-app/main/default/objects/POSI__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>