force-app/main/default/objects/POSI__c/fields/Strategies__c.field-meta.xml
<CustomField>
    <fullName>Strategies__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategies</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>